--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.23.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "1.5.2",
+    "babel-preset-env": "*",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
     "enzyme-adapter-react-16": "^1.3.1",
