--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-loader": "7.1.2",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.23.0",
+    "babel-polyfill": "6.26.0",
     "babel-preset-env": "*",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
@@ -33,6 +34,7 @@
     "raf": "3.3.2",
     "react": "^16.0.0",
     "react-addons-shallow-compare": "15.6.2",
+    "react-cookie-banner": "^4.0.0",
     "react-dates": "12.3.0",
     "react-dom": "^16.0.0",
     "react-modal": "2.2.2",
