--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "react-cookie-banner": "^4.0.0",
     "react-dates": "12.3.0",
     "react-dom": "^16.0.0",
-    "react-modal": "2.2.2",
+    "react-modal": "^3.5.1",
     "react-redux": "5.0.5",
     "react-router-dom": "4.1.2",
     "redux": "3.7.2",
